--- a/styles/modules/Footer.module.scss
+++ b/styles/modules/Footer.module.scss
@@ -18,7 +18,6 @@
 @import "styles/mixins";
 
 .container {
-  z-index: 1;
   width: 100%;
   padding: 1rem;
 }
