--- a/styles/modules/Search.module.scss
+++ b/styles/modules/Search.module.scss
@@ -189,6 +189,6 @@
   }
 
   .cardText {
-    color: $LT_SUB_TEXT;
+    color: $GREY;
   }
 }
